# Konv

./: .atom-build.yml  .bzrignore  .elementary-ide.proj  .gitignore  CMakeLists.txt  Contributors.md  LICENSE  ReadMe.md  build.sh  circle.yml  poulp.toml
cmake/: FallbackVersion.cmake.in  FindGLibTools.cmake  Format.cmake  GLibHelpers.cmake  GObjectIntrospectionMacros.cmake  GSettings.cmake  GitVersion.cmake  Translations.cmake  ValaPrecompile.cmake
data/: CMakeLists.txt  im.konv.client.desktop.in.in  konv.appdata.xml.in.in  konv.gresource.xml
data/interfaces/components/: HeaderBar.ui
data/interfaces/widgets/: ContactListRow.ui  ContactPreview.ui  WelcomeView.ui
data/interfaces/windows/: MainWindow.ui
data/resources/styles/: helpers.css
misc/: build-linux.sh  format-style.sh  lint.rb
misc/toolchains/: Toolchain-win32.cmake
po/: CMakeLists.txt  fr.po  konv.pot  ru_RU.po
src/: CMakeLists.txt  Config.vala.in  Konv.vala
src/core/: ToxSession.vala
src/gui/components/: HeaderBar.vala  SettingsListBox.vala  TabContainer.vala  TabNavbar.vala
src/gui/widgets/: AvatarWidget.vala  BaseView.vala  ContactListRow.vala  ContactPreview.vala  ViewStack.vala  WelcomeView.vala
src/gui/windows/: MainWindow.vala  SettingsWindow.vala
src/utils/: RoundImage.vala
src/vapis/: libtoxcore.vapi
